--- a/templates/INSTAGRAM/MAIN.html
+++ b/templates/INSTAGRAM/MAIN.html
@@ -13,23 +13,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 
     <title>독서기록장</title>
+  <style>
+  .box {
+      width: 150px;
+      height: 150px;
+      border-radius: 70%;
+      overflow: hidden;
+      }
+  .profile {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      }
+  .feed_box {
+      border: solid 1px gray;
+      background-color: white
+  }
+  </style>
   </head>
+
   <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light position-relative px-0">
-<div class="container-fluid d-flex align-items-center">
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(252,252,252); position: fixed; width: 100%">
+<div class="container-fluid" style="justify-content: space-between; flex-wrap: nowrap; width: 1000px">
+
   <!-- 왼쪽 : 로고 -->
-  <a class="navbar-brand" href="#">
-    <img src="{% static 'images/BOOKSNAP.png' %}" style="height:55px;">
-  </a>
+          <a class="navbar-brand" href="#">
+            <img src="{% static 'images/BOOKSNAP.png' %}" style="height:40px;">
+          </a>
 
 
   <!-- 가운데 : 검색창 -->
-          <div class="mx-auto d-flex" style="width:300px;">
-          <input class="form-control me-2" style="" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">search</button>
+          <div class="mx-auto d-flex" style="width:300px; height: 25px">
+          <input class="form-control me-2" style="box-shadow: none" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit" style="width:60px"><span class="material-symbols-outlined">search</span></button>
           </div>
 
-  <!-- 오른쪽 : 아이콘 -->
+  <!-- 오른쪽 : 아이콘 그룹 -->
           <div class="d-flex gap-3 ms-auto">
           <span class="material-symbols-outlined">home</span>
           <span class="material-symbols-outlined">send</span>
@@ -39,3 +59,90 @@
           </div>
 </div>
 </nav>
+
+<!-- 피드 화면 -->
+<div style="display: flex; flex-direction: row; text-align: center; justify-content:center; padding-top: 66px; background: #f4f4f4">
+    <!-- 왼쪽 피드 -->
+    <div style="width:600px; height: 500px; ; margin-right: 270px">
+        <div class="feed_box">
+
+            <!-- 프로필 -->
+            <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
+                <!-- 프로필 사진 -->
+                <div class="box" style="height: 60px; width: 60px">
+                    <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
+                </div>
+                <!-- 아이디 -->
+                <div style="margin-left: 10px">
+                    <b>SANDRA</b>
+                </div>
+            </div>
+
+            <!-- 게시물 -->
+            <div>
+                <img class="profile" src="{% static 'images/BOOK.png' %}" style="height: 600px">
+            </div>
+
+            <!-- 반응(클릭)/저장 -->
+            <div  style="display: flex; flex-direction: row; justify-content: space-between; margin: 10px">
+                <div>
+                    <span class="material-symbols-outlined">favorite</span>
+                    <span class="material-symbols-outlined">comment</span>
+                    <span class="material-symbols-outlined">send</span>
+                </div>
+                <div>
+                    <span class="material-symbols-outlined">bookmark</span>
+                </div>
+            </div>
+
+            <!-- 좋아요 -->
+            <div style="text-align: left; font-size: 14px; margin: 0 10px">
+                LIZZY <b>외 9명</b>이 좋아합니다
+            </div>
+
+            <!-- 댓글들 -->
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>ANNA</b> 추천 감사해요 >_<</div>
+        <hr style="margin-top: 10px; margin-bottom: 0px">
+            <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
+        </div>
+    </div>
+
+    <!-- 오른쪽 피드 -->
+    <div style="width: 400px; height: 1000px; background: #f4f4f4; position: fixed; left: 62%">
+
+        <!-- 프로필 -->
+        <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
+            <!-- 프로필 사진 -->
+            <div class="box" style="height: 60px; width: 60px">
+                <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
+            </div>
+            <!-- 아이디 -->
+            <div style="margin-left: 10px">
+                <b>SANDRA</b>
+            </div>
+        </div>
+
+        <!-- 추천 아이디 -->
+        <div style="display: flex; flex-direction: row; justify-content: space-between; margin: 20px">
+            <div style="font-weight: bold">
+                회원님을 위한 추천
+            </div>
+            <div>
+                <a href="#" style="font-weight: bold; color: black; text-decoration: none"> 모두보기 </a>
+            </div>
+        </div>
+
+
+        <div> 추천인 프로필</div>
+        <div> 추천인 프로필</div>
+        <div> 추천인 프로필</div>
+        <div> 추천인 프로필</div>
+        <div> 소개 도움말 홍보센터 API</div>
+        <div> 2021 인스타그램 프롬 페이스북</div>
+
+
+    </div>
+
+</div>
