피드 레이아웃 초안 완료

--- a/templates/INSTAGRAM/MAIN.html
+++ b/templates/INSTAGRAM/MAIN.html
@@ -64,7 +64,179 @@
 <div style="display: flex; flex-direction: row; text-align: center; justify-content:center; padding-top: 66px; background: #f4f4f4">
     <!-- 왼쪽 피드 -->
     <div style="width:600px; height: 500px; ; margin-right: 270px">
-        <div class="feed_box">
+        <div class="feed_box" style="margin-bottom: 30px">
+
+            <!-- 프로필 -->
+            <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
+                <!-- 프로필 사진 -->
+                <div class="box" style="height: 60px; width: 60px">
+                    <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
+                </div>
+                <!-- 아이디 -->
+                <div style="margin-left: 10px">
+                    <b>SANDRA</b>
+                </div>
+            </div>
+
+            <!-- 게시물 -->
+            <div>
+                <img class="profile" src="{% static 'images/BOOK.png' %}" style="height: 600px">
+            </div>
+
+            <!-- 반응(클릭)/저장 -->
+            <div  style="display: flex; flex-direction: row; justify-content: space-between; margin: 10px">
+                <div>
+                    <span class="material-symbols-outlined">favorite</span>
+                    <span class="material-symbols-outlined">comment</span>
+                    <span class="material-symbols-outlined">send</span>
+                </div>
+                <div>
+                    <span class="material-symbols-outlined">bookmark</span>
+                </div>
+            </div>
+
+            <!-- 좋아요 -->
+            <div style="text-align: left; font-size: 14px; margin: 0 10px">
+                LIZZY <b>외 9명</b>이 좋아합니다
+            </div>
+
+            <!-- 댓글들 -->
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>ANNA</b> 추천 감사해요 >_<</div>
+        <hr style="margin-top: 10px; margin-bottom: 0px">
+            <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
+        </div>
+        <div class="feed_box" style="margin-bottom: 30px">
+
+            <!-- 프로필 -->
+            <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
+                <!-- 프로필 사진 -->
+                <div class="box" style="height: 60px; width: 60px">
+                    <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
+                </div>
+                <!-- 아이디 -->
+                <div style="margin-left: 10px">
+                    <b>SANDRA</b>
+                </div>
+            </div>
+
+            <!-- 게시물 -->
+            <div>
+                <img class="profile" src="{% static 'images/BOOK.png' %}" style="height: 600px">
+            </div>
+
+            <!-- 반응(클릭)/저장 -->
+            <div  style="display: flex; flex-direction: row; justify-content: space-between; margin: 10px">
+                <div>
+                    <span class="material-symbols-outlined">favorite</span>
+                    <span class="material-symbols-outlined">comment</span>
+                    <span class="material-symbols-outlined">send</span>
+                </div>
+                <div>
+                    <span class="material-symbols-outlined">bookmark</span>
+                </div>
+            </div>
+
+            <!-- 좋아요 -->
+            <div style="text-align: left; font-size: 14px; margin: 0 10px">
+                LIZZY <b>외 9명</b>이 좋아합니다
+            </div>
+
+            <!-- 댓글들 -->
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>ANNA</b> 추천 감사해요 >_<</div>
+        <hr style="margin-top: 10px; margin-bottom: 0px">
+            <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
+        </div>
+        <div class="feed_box" style="margin-bottom: 30px">
+
+    <!-- 프로필 -->
+    <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
+        <!-- 프로필 사진 -->
+        <div class="box" style="height: 60px; width: 60px">
+            <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
+        </div>
+        <!-- 아이디 -->
+        <div style="margin-left: 10px">
+            <b>SANDRA</b>
+        </div>
+    </div>
+
+    <!-- 게시물 -->
+    <div>
+        <img class="profile" src="{% static 'images/BOOK.png' %}" style="height: 600px">
+    </div>
+
+    <!-- 반응(클릭)/저장 -->
+    <div  style="display: flex; flex-direction: row; justify-content: space-between; margin: 10px">
+        <div>
+            <span class="material-symbols-outlined">favorite</span>
+            <span class="material-symbols-outlined">comment</span>
+            <span class="material-symbols-outlined">send</span>
+        </div>
+        <div>
+            <span class="material-symbols-outlined">bookmark</span>
+        </div>
+    </div>
+
+    <!-- 좋아요 -->
+    <div style="text-align: left; font-size: 14px; margin: 0 10px">
+        LIZZY <b>외 9명</b>이 좋아합니다
+    </div>
+
+    <!-- 댓글들 -->
+    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
+    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
+    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>ANNA</b> 추천 감사해요 >_<</div>
+<hr style="margin-top: 10px; margin-bottom: 0px">
+    <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
+</div>
+        <div class="feed_box" style="margin-bottom: 30px">
+
+    <!-- 프로필 -->
+    <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
+        <!-- 프로필 사진 -->
+        <div class="box" style="height: 60px; width: 60px">
+            <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
+        </div>
+        <!-- 아이디 -->
+        <div style="margin-left: 10px">
+            <b>SANDRA</b>
+        </div>
+    </div>
+
+    <!-- 게시물 -->
+    <div>
+        <img class="profile" src="{% static 'images/BOOK.png' %}" style="height: 600px">
+    </div>
+
+    <!-- 반응(클릭)/저장 -->
+    <div  style="display: flex; flex-direction: row; justify-content: space-between; margin: 10px">
+        <div>
+            <span class="material-symbols-outlined">favorite</span>
+            <span class="material-symbols-outlined">comment</span>
+            <span class="material-symbols-outlined">send</span>
+        </div>
+        <div>
+            <span class="material-symbols-outlined">bookmark</span>
+        </div>
+    </div>
+
+    <!-- 좋아요 -->
+    <div style="text-align: left; font-size: 14px; margin: 0 10px">
+        LIZZY <b>외 9명</b>이 좋아합니다
+    </div>
+
+    <!-- 댓글들 -->
+    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
+    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
+    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>ANNA</b> 추천 감사해요 >_<</div>
+<hr style="margin-top: 10px; margin-bottom: 0px">
+    <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
+</div>
+        <div class="feed_box" style="margin-bottom: 30px">
 
             <!-- 프로필 -->
             <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
@@ -109,6 +281,7 @@
         </div>
     </div>
 
+
     <!-- 오른쪽 피드 -->
     <div style="width: 400px; height: 1000px; background: #f4f4f4; position: fixed; left: 62%">
 
@@ -124,24 +297,104 @@
             </div>
         </div>
 
-        <!-- 추천 아이디 -->
-        <div style="display: flex; flex-direction: row; justify-content: space-between; margin: 20px">
-            <div style="font-weight: bold">
-                회원님을 위한 추천
+        <!-- 회원님을 위한 추천 -->
+        <div>
+            <!-- 글자 -->
+            <div style="display: flex; flex-direction: row; justify-content: space-between; margin: 20px">
+                <div style="font-weight: bold">
+                    회원님을 위한 추천
+                </div>
+                <div>
+                    <a href="#" style="font-weight: bold; color: black; text-decoration: none"> 모두보기 </a>
+                </div>
             </div>
-            <div>
-                <a href="#" style="font-weight: bold; color: black; text-decoration: none"> 모두보기 </a>
+
+            <!-- 추천 목록 -->
+            <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; margin: 10px">
+
+                <div style="display: flex; flex-direction: row;">
+                    <!-- 프로필 사진 -->
+                    <div class="box" style="height: 40px; width: 40px">
+                        <img class="profile" src="{% static 'images/PEDRO.png' %}" style="height:40px; width: 40px">
+                    </div>
+
+                    <!-- 아이디 -->
+                    <div style="margin-left: 10px; text-align: left">
+                        <div style="font-weight: bold; font-size: 14px">PEDRO</div>
+                        <div style="color: gray; font-size: 12px">MUHAMAD ALI</div>
+                    </div>
+                </div>
+
+                    <!-- 팔로우 -->
+                <div>
+                    <a href="#" style="font-size: 14px; font-weight: bold; color: blue; text-decoration: none; margin-right: 15px">팔로우</a>
+                </div>
             </div>
+            <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; margin: 10px">
+
+                <div style="display: flex; flex-direction: row;">
+                    <!-- 프로필 사진 -->
+                    <div class="box" style="height: 40px; width: 40px">
+                        <img class="profile" src="{% static 'images/PEDRO.png' %}" style="height:40px; width: 40px">
+                    </div>
+
+                    <!-- 아이디 -->
+                    <div style="margin-left: 10px; text-align: left">
+                        <div style="font-weight: bold; font-size: 14px">PEDRO</div>
+                        <div style="color: gray; font-size: 12px">MUHAMAD ALI</div>
+                    </div>
+                </div>
+
+                    <!-- 팔로우 -->
+                <div>
+                    <a href="#" style="font-size: 14px; font-weight: bold; color: blue; text-decoration: none; margin-right: 15px">팔로우</a>
+                </div>
+            </div>
+            <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; margin: 10px">
+
+    <div style="display: flex; flex-direction: row;">
+        <!-- 프로필 사진 -->
+        <div class="box" style="height: 40px; width: 40px">
+            <img class="profile" src="{% static 'images/PEDRO.png' %}" style="height:40px; width: 40px">
         </div>
 
+        <!-- 아이디 -->
+        <div style="margin-left: 10px; text-align: left">
+            <div style="font-weight: bold; font-size: 14px">PEDRO</div>
+            <div style="color: gray; font-size: 12px">MUHAMAD ALI</div>
+        </div>
+    </div>
 
-        <div> 추천인 프로필</div>
-        <div> 추천인 프로필</div>
-        <div> 추천인 프로필</div>
-        <div> 추천인 프로필</div>
-        <div> 소개 도움말 홍보센터 API</div>
-        <div> 2021 인스타그램 프롬 페이스북</div>
+        <!-- 팔로우 -->
+    <div>
+        <a href="#" style="font-size: 14px; font-weight: bold; color: blue; text-decoration: none; margin-right: 15px">팔로우</a>
+    </div>
+</div>
+            <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; margin: 10px">
 
+                <div style="display: flex; flex-direction: row;">
+                    <!-- 프로필 사진 -->
+                    <div class="box" style="height: 40px; width: 40px">
+                        <img class="profile" src="{% static 'images/PEDRO.png' %}" style="height:40px; width: 40px">
+                    </div>
+
+                    <!-- 아이디 -->
+                    <div style="margin-left: 10px; text-align: left">
+                        <div style="font-weight: bold; font-size: 14px">PEDRO</div>
+                        <div style="color: gray; font-size: 12px">MUHAMAD ALI</div>
+                    </div>
+                </div>
+
+                    <!-- 팔로우 -->
+                <div>
+                    <a href="#" style="font-size: 14px; font-weight: bold; color: blue; text-decoration: none; margin-right: 15px">팔로우</a>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- 그 외 안내 -->
+        <div style="margin-top: 50px; margin-left: 10px; font-size: 12px; color: darkgray; text-align: left"> 2026 독서기록장 by LIZZY </div>
 
     </div>
 
