--- a/templates/BOOKSNAP/MAIN.html
+++ b/templates/BOOKSNAP/MAIN.html
@@ -63,7 +63,7 @@
 <!-- 피드 화면 -->
 <div style="display: flex; flex-direction: row; text-align: center; justify-content:center; padding-top: 66px; background: #f4f4f4">
     <!-- 왼쪽 피드 -->
-    <div style="width:600px; height: 500px; ; margin-right: 270px">
+    <div style="width:600px; margin-right: 270px">
         <div class="feed_box" style="margin-bottom: 30px">
 
             <!-- 프로필 -->
@@ -98,6 +98,10 @@
             <!-- 좋아요 -->
             <div style="text-align: left; font-size: 14px; margin: 0 10px">
                 LIZZY <b>외 9명</b>이 좋아합니다
+            </div>
+
+            <div style="text-align: left; font-size: 16px; margin-left: 10px; margin-bottom: 7px; margin-top: 7px">
+                <b>SANDRA</b> 감동적인 책이었어요. 여러분도 읽어 보세요!
             </div>
 
             <!-- 댓글들 -->
@@ -143,6 +147,10 @@
                 LIZZY <b>외 9명</b>이 좋아합니다
             </div>
 
+            <div style="text-align: left; font-size: 16px; margin-left: 10px; margin-bottom: 7px; margin-top: 7px">
+                <b>SANDRA</b> 감동적인 책이었어요. 여러분도 읽어 보세요!
+            </div>
+
             <!-- 댓글들 -->
             <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
             <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
@@ -150,92 +158,6 @@
         <hr style="margin-top: 10px; margin-bottom: 0px">
             <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
         </div>
-        <div class="feed_box" style="margin-bottom: 30px">
-
-    <!-- 프로필 -->
-    <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
-        <!-- 프로필 사진 -->
-        <div class="box" style="height: 60px; width: 60px">
-            <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
-        </div>
-        <!-- 아이디 -->
-        <div style="margin-left: 10px">
-            <b>SANDRA</b>
-        </div>
-    </div>
-
-    <!-- 게시물 -->
-    <div>
-        <img class="profile" src="{% static 'images/BOOK.png' %}" style="height: 600px">
-    </div>
-
-    <!-- 반응(클릭)/저장 -->
-    <div  style="display: flex; flex-direction: row; justify-content: space-between; margin: 10px">
-        <div>
-            <span class="material-symbols-outlined">favorite</span>
-            <span class="material-symbols-outlined">comment</span>
-            <span class="material-symbols-outlined">send</span>
-        </div>
-        <div>
-            <span class="material-symbols-outlined">bookmark</span>
-        </div>
-    </div>
-
-    <!-- 좋아요 -->
-    <div style="text-align: left; font-size: 14px; margin: 0 10px">
-        LIZZY <b>외 9명</b>이 좋아합니다
-    </div>
-
-    <!-- 댓글들 -->
-    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
-    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
-    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>ANNA</b> 추천 감사해요 >_<</div>
-<hr style="margin-top: 10px; margin-bottom: 0px">
-    <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
-</div>
-        <div class="feed_box" style="margin-bottom: 30px">
-
-    <!-- 프로필 -->
-    <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
-        <!-- 프로필 사진 -->
-        <div class="box" style="height: 60px; width: 60px">
-            <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
-        </div>
-        <!-- 아이디 -->
-        <div style="margin-left: 10px">
-            <b>SANDRA</b>
-        </div>
-    </div>
-
-    <!-- 게시물 -->
-    <div>
-        <img class="profile" src="{% static 'images/BOOK.png' %}" style="height: 600px">
-    </div>
-
-    <!-- 반응(클릭)/저장 -->
-    <div  style="display: flex; flex-direction: row; justify-content: space-between; margin: 10px">
-        <div>
-            <span class="material-symbols-outlined">favorite</span>
-            <span class="material-symbols-outlined">comment</span>
-            <span class="material-symbols-outlined">send</span>
-        </div>
-        <div>
-            <span class="material-symbols-outlined">bookmark</span>
-        </div>
-    </div>
-
-    <!-- 좋아요 -->
-    <div style="text-align: left; font-size: 14px; margin: 0 10px">
-        LIZZY <b>외 9명</b>이 좋아합니다
-    </div>
-
-    <!-- 댓글들 -->
-    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
-    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
-    <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>ANNA</b> 추천 감사해요 >_<</div>
-<hr style="margin-top: 10px; margin-bottom: 0px">
-    <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
-</div>
         <div class="feed_box" style="margin-bottom: 30px">
 
             <!-- 프로필 -->
@@ -270,6 +192,104 @@
             <!-- 좋아요 -->
             <div style="text-align: left; font-size: 14px; margin: 0 10px">
                 LIZZY <b>외 9명</b>이 좋아합니다
+            </div>
+
+            <div style="text-align: left; font-size: 16px; margin-left: 10px; margin-bottom: 7px; margin-top: 7px">
+                <b>SANDRA</b> 감동적인 책이었어요. 여러분도 읽어 보세요!
+            </div>
+
+            <!-- 댓글들 -->
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>ANNA</b> 추천 감사해요 >_<</div>
+        <hr style="margin-top: 10px; margin-bottom: 0px">
+            <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
+        </div>
+        <div class="feed_box" style="margin-bottom: 30px">
+
+            <!-- 프로필 -->
+            <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
+                <!-- 프로필 사진 -->
+                <div class="box" style="height: 60px; width: 60px">
+                    <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
+                </div>
+                <!-- 아이디 -->
+                <div style="margin-left: 10px">
+                    <b>SANDRA</b>
+                </div>
+            </div>
+
+            <!-- 게시물 -->
+            <div>
+                <img class="profile" src="{% static 'images/BOOK.png' %}" style="height: 600px">
+            </div>
+
+            <!-- 반응(클릭)/저장 -->
+            <div  style="display: flex; flex-direction: row; justify-content: space-between; margin: 10px">
+                <div>
+                    <span class="material-symbols-outlined">favorite</span>
+                    <span class="material-symbols-outlined">comment</span>
+                    <span class="material-symbols-outlined">send</span>
+                </div>
+                <div>
+                    <span class="material-symbols-outlined">bookmark</span>
+                </div>
+            </div>
+
+            <!-- 좋아요 -->
+            <div style="text-align: left; font-size: 14px; margin: 0 10px">
+                LIZZY <b>외 9명</b>이 좋아합니다
+            </div>
+
+            <div style="text-align: left; font-size: 16px; margin-left: 10px; margin-bottom: 7px; margin-top: 7px">
+                <b>SANDRA</b> 감동적인 책이었어요. 여러분도 읽어 보세요!
+            </div>
+
+            <!-- 댓글들 -->
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>PEDRO</b> 좋은 책이네요!</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>MARIA</b> 저도 읽어봐야겠어요</div>
+            <div style="text-align: left; font-size: 16px; margin: 0 10px"><b>ANNA</b> 추천 감사해요 >_<</div>
+        <hr style="margin-top: 10px; margin-bottom: 0px">
+            <div> <input type="text" class="form-control" style="box-shadow: none; border: none" placeholder="댓글 달기..."> </div>
+        </div>
+        <div class="feed_box" style="margin-bottom: 30px">
+
+            <!-- 프로필 -->
+            <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
+                <!-- 프로필 사진 -->
+                <div class="box" style="height: 60px; width: 60px">
+                    <img class="profile" src="{% static 'images/PROFILE.png' %}" style="height:60px; width: 60px">
+                </div>
+                <!-- 아이디 -->
+                <div style="margin-left: 10px">
+                    <b>SANDRA</b>
+                </div>
+            </div>
+
+            <!-- 게시물 -->
+            <div>
+                <img class="profile" src="{% static 'images/BOOK.png' %}" style="height: 600px">
+            </div>
+
+            <!-- 반응(클릭)/저장 -->
+            <div  style="display: flex; flex-direction: row; justify-content: space-between; margin: 10px">
+                <div>
+                    <span class="material-symbols-outlined">favorite</span>
+                    <span class="material-symbols-outlined">comment</span>
+                    <span class="material-symbols-outlined">send</span>
+                </div>
+                <div>
+                    <span class="material-symbols-outlined">bookmark</span>
+                </div>
+            </div>
+
+            <!-- 좋아요 -->
+            <div style="text-align: left; font-size: 14px; margin: 0 10px">
+                LIZZY <b>외 9명</b>이 좋아합니다
+            </div>
+
+            <div style="text-align: left; font-size: 16px; margin-left: 10px; margin-bottom: 7px; margin-top: 7px">
+                <b>SANDRA</b> 감동적인 책이었어요. 여러분도 읽어 보세요!
             </div>
 
             <!-- 댓글들 -->
@@ -283,7 +303,7 @@
 
 
     <!-- 오른쪽 피드 -->
-    <div style="width: 400px; height: 1000px; background: #f4f4f4; position: fixed; left: 62%">
+    <div style="width: 400px; height: 2000px; background: #f4f4f4; position: fixed; left: 62%">
 
         <!-- 프로필 -->
         <div style="display: flex; flex-direction: row; align-items: center; margin: 10px">
